[tool.ty.environment]
python-version = "3.12"

[tool.ty.rules]
possibly-unresolved-reference = "warn"
unresolved-import = "warn"

[tool.ty.src]
exclude = [".venv/**", "test/**", "**/__init__.py", "**/*.ipynb", "notebooks/**"]

[tool.ty.terminal]
output-format = "full"
error-on-warning = false

[tool.ruff]
line-length = 88
exclude = [
    ".venv",
    "src/tests",
    "__init__.py",
    "**/*.ipynb",
    "notebooks",
]

[tool.ruff.lint]
extend-select = [
  "D",   # pydocstyle
]
ignore = ["D415", "D107", "D200", "D205", "D106"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[project]
name = "leo-prompt-optimizer"
version = "0.2.4"
description = "A Python library to optimize prompt drafts using LLMs"
readme = "README.md"
authors = [
  { name="Leonard Baesen-Wagner", email="lr.baesen@gmail.com" }
]
license = { text = "MIT" }
dependencies = [
  "jinja2>=3.1.6",
  "openai>=2.*",
  "python-dotenv>=1.2.1",
]
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "ruff>=0.15.1",
    "setuptools>=82.0.0",
    "ty>=0.0.17",
]
